changing to stealth mode

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@ id: home
 
 <link rel="stylesheet" href="/css/index.css">
 
-<main class="facet-masthead">
+<main class="stealth-masthead">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
         <p class="lead">
-          An open-source JavaScript framework for composing powerful database queries
-          that return data optimized for creating advanced visualizations.
+          A Stealth Project in Stealth Mode.
         </p>
         <!--
         <p>
