--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ id: home
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="stealth-closeup"><img class="stealth-img" src="/img/stealth_closeup.png"></span>
+        <span class="stealth-bootlogo"><img class="stealth-logo" src="/img/stealth_closeup.png"></span>
         <p class="lead">
           A Stealth Project in Stealth Mode.
         </p>
