--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@ id: home
 <link rel="stylesheet" href="/css/index.css">
 
 <main class="stealth-masthead">
+  <div class="stealth-mainpic">
+    <img class="stealth-cockpit" src="/img/stealth_closeup.png">
+  </div>
   <div class="container">
+
     <div class="row">
+      
       <div class="col-md-8 col-md-offset-2 text-center">
-        <span class="stealth-bootlogo"><img class="stealth-logo" src="/img/stealth_closeup.png"></span>
-        <p class="lead">
+        <!-- <p class="lead"> -->
+        <p class="lead-text">
           A Stealth Project in Stealth Mode.
         </p>
         <!--
