--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ id: home
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <h3>Get Started</h3>
-      <p><a href="www.unicornsay.com">Introduction</a></p>
+      <h3>You're Being Watched</h3>
+      <p><a href="http://www.unicornsay.com">Learn More</a></p>
     </div>
   </div>
 </div>
